cha-pre-live-flux2/cha-eks-5a/namespaces/sbfeed-integration/network-policy-apps.yaml
####################################################
## Allow ingress from sbfeed-integration and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-sbfeed-integration
  namespace: sbfeed-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: sbfeed-integration
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from sbfeed-integration ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sbfeed-integration
  namespace: sbfeed-integration
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: sbfeed-integration

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: sbfeed-integration
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
        
      
#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: sbfeed-integration
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP

##################################################
################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: sbfeed-integration
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: sbfeed-integration
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP
